--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ coreapi==2.3.3
 coreschema==0.0.4
 dj-database-url==0.5.0
 Django==3.2.5
+django-extensions==3.1.3
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.7.2
 future==0.18.2
