--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ dj-database-url==0.5.0
 Django==3.2.5
 django-extensions==3.1.3
 djangorestframework==3.12.4
+djangorestframework-bulk==0.2.1
 djangorestframework-simplejwt==4.7.2
 future==0.18.2
 gunicorn==20.1.0
